# Reddit_Columbot

./: .gitignore  CLAUDE.md  README.md  columbot.py  pyproject.toml  suspect.py  suspecttest.py
archive/: logic-scope-stretchgoals.txt  redditbotp1.py  suspecttest.py
columbot/: __main__.py  collect.py  input_parse.py  report.py  scoring.py  types.py
tests/: conftest.py  test_collect.py  test_input_parse.py  test_report.py  test_scoring.py
